<resources>
    <string name="app_name">MathGame</string>
    <string name="test_level_name">test</string>
    <string name="easy_level_name">easy</string>
    <string name="normal_level_name">normal</string>
    <string name="hard_level_name">hard</string>

    <string name="right_answers_title">Минимальное количество правильных ответов: %s</string>
    <string name="total_answers_title">Всего ответов: %s</string>
    <string name="percent_title">Минимальный процент правильных ответов: %s</string>
    <string name="total_percent_title">Полученный процент правильных ответов: %s</string>

    <string name="win_title">Вы победили!</string>
    <string name="lose_title">Вы проиграли.</string>

    <string name="progress_answers">Правильных ответов %s (минимум %s):</string>
    <string name="start">START</string>
    <string name="brain_image_content_desc">brain image</string>


</resources>