<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/app_name" />

    <ImageView
        android:layout_gravity="center"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/banner"
        android:contentDescription="@string/brain_image_content_desc" />

    <Button
        android:id="@+id/bStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/start"
        android:layout_margin="10dp"/>

</LinearLayout>
</layout>