<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    tools:context=".presentation.ChooseLevelFragment">

<androidx.cardview.widget.CardView
    android:id="@+id/cvTestLevel"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:padding="4dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    app:cardBackgroundColor="@color/test_level_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_level_name"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEasyLevel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cardBackgroundColor="@color/easy_level_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_level_name"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNormalLevel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cardBackgroundColor="@color/normal_level_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_level_name"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHardLevel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:cardBackgroundColor="@color/hard_level_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_level_name"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>