<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.GameFinishedFragment">

    <TextView
        android:id="@+id/tvWinOrLoseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:text="Вы Победили!"/>

    <ImageView
        android:id="@+id/ivSmile"
        app:layout_constraintTop_toBottomOf="@+id/tvWinOrLoseTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        tools:src="@drawable/ic_baseline_win_100"/>

    <TextView
        android:id="@+id/tvRightAnswersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivSmile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/right_answers_title"/>

    <TextView
        android:id="@+id/tvRightAnswersValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivSmile"
        app:layout_constraintStart_toEndOf="@id/tvRightAnswersTitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        tools:text="0"/>

    <TextView
        android:id="@+id/tvTotalAnswersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvRightAnswersTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/total_answers_title"/>

    <TextView
        android:id="@+id/tvTotalAnswersValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvRightAnswersTitle"
        app:layout_constraintStart_toEndOf="@+id/tvTotalAnswersTitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        tools:text="0"/>

    <TextView
        android:id="@+id/tvPercentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalAnswersTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/percent_title"/>

    <TextView
        android:id="@+id/tvPercentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalAnswersTitle"
        app:layout_constraintStart_toEndOf="@+id/tvPercentTitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        tools:text="0"/>

    <TextView
        android:id="@+id/tvLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPercentTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/level_title"/>

    <TextView
        android:id="@+id/tvLevelValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPercentTitle"
        app:layout_constraintStart_toEndOf="@+id/tvLevelTitle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        tools:text="@string/normal_level_name"/>



</androidx.constraintlayout.widget.ConstraintLayout>